@@ -11,7 +11,7 @@ from collective.geo.mapwidget import utils
 
 
 _BINGURL = '%s://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6'
-_GOOGLEURL = '%s://maps.google.com/maps/api/js?v=3.2&sensor=false'
+_GOOGLEURL = '%s://maps.google.com/maps/api/js?v=3.2&sensor=false&key=%s'
 
 
 class GeoSettingsView(object):
@@ -61,7 +61,7 @@ class GeoSettingsView(object):
     def google_maps_js(self):
         """return google maps 3 api javascript url
         """
-        return _GOOGLEURL % self.layer_protocol
+        return _GOOGLEURL % (self.layer_protocol, self.googleapi)
 
     @property
     def bingapi(self):
