@@ -4,7 +4,10 @@ Changelog
 2.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Show google api key field in controlpanel and also use it.
+  Since 22th June 2016 goolge map api shows an annoying MissingKeyMapError
+  Pop-up if for new domains and localhost if you don't provide a valid api key.
+  [mathias.leimgruber]
 
 
 2.3 (2015-11-17)
